<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llSignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F7FA"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/tv_head"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/etSurname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:maxLength="30"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="true"
            app:ccp_textSize="18sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="30"
            android:textAllCaps="true"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:src="@drawable/email"
            android:contentDescription="TODO" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:minWidth="300dip"
            android:minHeight="40dip"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:minWidth="300dip"
            android:minHeight="40dip"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>