<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llMain"
    android:background="#E0F7FA"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvHead"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="SIGN IN"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:ccp_autoDetectCountry="true"
            app:ccp_showNameCode="true"
            app:ccp_textSize="18sp" />

        <EditText
            android:id="@+id/etPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="30"
            android:textAllCaps="true"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:minWidth="300dip"
            android:minHeight="40dip"
            android:onClick="registration"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="1"
            android:background="@drawable/main_buttons"
            android:minWidth="300dip"
            android:minHeight="40dip"
            android:onClick="signIn"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:text="@string/forgot_password"
        android:textColor="#039BE5" />

</LinearLayout>